--- a/index.html
+++ b/index.html
@@ -3,31 +3,29 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title>Traffic Services</title>
+		<title>My Vehicle Info</title>
 		<link rel = "stylesheet" href = "style_homepage.css">
 		<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Muli">
 	</head>
-	
+
 	<body>
-		<h1>My Vehicle Info<h1><hr>
+		<h1>My Vehicle Info</h1><hr>
 		
 		<ul>
-			<li><a href = "index.html"><mark>Home</mark></a></li>
+			<li><a href = "index.html">Home</a></li>
 			<li><a href = "description.html">Description</a></li>
 			<li><a href = "violations.html">Violations</a></li>
 			<li><a href = "insurance.html">Insurance</a></li>
-			<li>Log In</li>
-		</ul><br>
-		
+			<li style = "float : right"><a href = "log_in.html">Log In</a></li>
+		</ul><br><hr>
+
 		<h3 class = "header3">Section 1</h3>
 		<p>Section 1 text</p><hr><br>
-		
+
 		<h3 class = "header3">Section 2<h3>
 		<p>Section 2 text</p><hr><br>
-		
+
 		<h3 class = "header3">Section 3</h3>
 		<p>Section 3 text</p><hr><br>
-
-		</form>
 	</body>
 </html>
