--- a/violations.html
+++ b/violations.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>My Vehicle Info</title>
-		<link rel = "stylesheet" href = "CSS/style_homepage.css">
+		<link rel = "stylesheet" href = "style_homepage.css">
 		<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Muli">
 	</head>
 	
