--- a/insurance.html
+++ b/insurance.html
@@ -1,3 +1,4 @@
+
 <!Doctype HTML5>
 
 <html>
@@ -27,6 +28,7 @@
 
 		<h3 class = "header3">Section 3</h3>
 		<p>Section 3 text</p><hr><br>
-
+		
+		</form>
 	</body>
 </html>
